@@ -50,6 +50,10 @@ extern int open_source_file (struct symtab *s);
 
 extern const char *symtab_to_fullname (struct symtab *s);
 
+/* Returns filename without the compile directory part, basename or absolute
+   filename.  It depends on 'set filename-display' value.  */
+extern const char *symtab_to_filename_for_display (struct symtab *symtab);
+
 /* Create and initialize the table S->line_charpos that records the
    positions of the lines in the source file, which is assumed to be
    open on descriptor DESC.  All set S->nlines to the number of such
